integrando com API do ChatGPT